--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <p>I'm hosted with GitHub Pages.Yay!</p>
 
 </body>
 
